# casestack

./: .gitignore  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  case.yaml.example  pyproject.toml
docs/plans/: 2026-02-25-casestack-mvp.md  2026-03-01-frontend-design.md  2026-03-01-frontend-implementation.md  HOW_WE_BUILT_EPSTEIN_DATA_COM.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: ask.ts  client.ts  conversations.ts
frontend/src/components/: DocumentReader.tsx  EntityGraph.tsx  Layout.tsx  Lightbox.tsx  MediaPlayer.tsx  PipelineToggle.tsx  ProgressBar.tsx  SearchResultCard.tsx  Sidebar.tsx
frontend/src/hooks/: useSearch.ts
frontend/src/pages/: AskAssistant.tsx  CaseList.tsx  CaseSettings.tsx  Dashboard.tsx  DocumentBrowser.tsx  EntityViewer.tsx  Heatmap.tsx  ImageGallery.tsx  NewCaseWizard.tsx  ProjectDashboard.tsx  Search.tsx  TranscriptBrowser.tsx
frontend/src/styles/: globals.css
presets/: epstein.yaml  quickstart.yaml
src/casestack/: __init__.py  ask.py  ask_server.py  case.py  cli.py  config.py  ingest.py  pii.py  pipeline.py
src/casestack/api/: app.py  deps.py  state.py  websocket.py
src/casestack/api/routes/: ask.py  cases.py  conversations.py  documents.py  images.py  (+8 more)
src/casestack/exporters/: sqlite_export.py
src/casestack/models/: __init__.py  document.py  forensics.py  registry.py
src/casestack/processors/: captioner.py  confidence.py  dedup.py  documentcloud_fetcher.py  embeddings.py  entities.py  knowledge_graph.py  markitdown_extractor.py  ocr.py  page_embedder.py  pymupdf_extractor.py  redaction.py  transcription.py
src/casestack/templates/: index.html
tests/: test_adjacent_context.py  test_api_cases.py  test_api_data_routes.py  test_api_pipeline.py  test_api_search.py  test_api_state.py  test_ask.py  test_case_config.py  test_cli_start.py  test_dedupe_sources.py  test_doc_overview.py  test_documentcloud_fetcher.py  test_e2e.py  test_evidence_diversity.py  test_history_compaction.py  test_history_limit.py  test_hybrid_search.py  test_ingest_callback.py  test_markitdown_extractor.py  test_page_architecture.py  test_pii.py  test_pipeline.py  test_query_planner_rules.py  test_sanitize_fts5.py  test_serve.py  test_small_doc_siblings.py  test_transcription.py
